--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,8 @@
                         </goals>
                     </execution>
                     <execution>
-                        <id>check</id>
+                        <id>check-test</id>
+                        <phase>verify</phase>
                         <goals>
                             <goal>check</goal>
                         </goals>
@@ -69,8 +70,6 @@
                             </rules>
                         </configuration>
                     </execution>
-
-
 
                 </executions>
             </plugin>
